--- a/Amit/package.json
+++ b/Amit/package.json
@@ -16,8 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jwt-simple": "^0.5.6",
-    "mongoose": "^7.0.3",
-    "uuidv4": "^6.2.13"
+    "mongoose": "^7.0.3"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
